	  SOCK_RAW, so the entire Ethernet frame including the header can
          be controlled.

	* arp-scan.c: Changed to build entire outgoing frame, rather than
	  just the ARP payload.

	* arp-scan.c: Modifications to support BPF link-layer.  This has been
	  tested on FreeBSD 6.1, OpenBSD 3.9, NetBSD 3.0.1 and
          Darwin 7.9.0 (MacOS 10.3.9).

2006-07-11 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Removed unneeded gettimeofday() call in add_host().
	  This increases the host addition rate considerably, so adding
	  a class-A network (2^24 hosts) now takes 15 seconds as opposed
	  to 80 seconds.

2006-07-10 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.h, arp-scan.c: Removed unneeded element "n" from host
	  entry structure.  This reduces the per-host memory usage from
	  32 bytes per host to 28 bytes per host.

	* mac-vendor.5: New manual page for the mac-vendor.txt file format.

2006-07-03 Roy Hills <Roy.Hills@nta-monitor.com>

	* link-packet-socket.c: New file containing all functions that
	  use Linux packet socket link layer interface.  This moves all
	  the packet-socket implementation dependent to this one file, which
	  should make future porting to other operating systems easier.

	* arp-scan.c, arp-scan.h: Modified to use link-layer functions in
	  new link-packet-socket.c file.

	* configure.ac: Increased version number to 1.4.2.

2006-06-28 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.h: removed the unneeded ip_address union
	  and replaced it with "struct in_addr".  As arp-scan is only
	  applicable to IPv4, we don't need to use the union.  This
	  change reduces the size of an address from 16 bytes to 4, and
	  reduces the per-host memory usage from 44 bytes/host to 32.

	* arp-fingerprint: Added Windows Vista Beta 2 fingerprint.

2006-06-27 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Increase version number to 1.4.1 in preparation
	  for future changes.
